--- a/index.html
+++ b/index.html
@@ -35,6 +35,31 @@
                 </ul>
             </nav>
         </section>
+
+        <section class="background_img">
+
+            <div class="background_moon">
+                <div>
+                    <h1 class="letra">To the moon!!</h1>
+                </div>
+
+                <div class="col">
+                    <p class="letra">Lorem ipsum dolor aumet consecutur elgt. volutn assumaendra</p>
+                </div>
+
+                <div class="col">
+                    <button><p class="letra">fes una reserva</p></button>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="background">
+            <footer class="d-flex justify-content-center">
+                <p class="blanco letra mt-3">Copyright, Daniel Sastre</p>
+            </footer>
+        </section>
+
     </section>
 </body>
 
