--- a/galeria.html
+++ b/galeria.html
@@ -35,6 +35,60 @@
                 </ul>
             </nav>
         </section>
+
+        <section class="background_img">
+
+            <div class="container text-center">
+                <div class="row">
+                  <div class="col my-1">
+                    <img src="img/moon1.jpg" alt="" class="img-fluid">
+                  </div>
+                  <div class="col my-1">
+                    <img src="img/moon2.jpg" alt="" class="img-fluid">
+                  </div>
+                  <div class="col my-1">
+                    <img src="img/moon3.jpg" alt="" class="img-fluid">
+                  </div>
+                </div>
+            </div>
+
+            <div class="container text-center">
+                <div class="row">
+                  <div class="col my-1">
+                    <img src="img/moon4.jpg" alt="" class="img-fluid">
+                  </div>
+                  <div class="col my-1">
+                    <img src="img/moon5.jpg" alt="" class="img-fluid">
+                  </div>
+                  <div class="col my-1">
+                    <img src="img/moon6.jpg" alt="" class="img-fluid">
+                  </div>
+                </div>
+            </div>
+
+            <div class="container text-center">
+                <div class="row">
+                  <div class="col my-1">
+                    <img src="img/moon7.jpg" alt="" class="img-fluid">
+                  </div>
+                  <div class="col my-1">
+                    <img src="img/moon8.jpg" alt="" class="img-fluid">
+                  </div>
+                  <div class="col my-1">
+                    <img src="img/moon9.jpg" alt="" class="img-fluid">
+                  </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="background">
+            
+            <footer class="d-flex justify-content-center">
+                <p class="blanco letra mt-3">Copyright, Daniel Sastre</p>
+            </footer>
+
+        </section>
+
     </section>
 </body>
 
