--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                     <h1 class="letra">To the moon!!</h1>
                 </div>
 
-                <div class="col">
+                <div>
                     <p class="letra">Lorem ipsum dolor aumet consecutur elgt. volutn assumaendra</p>
                 </div>
 
-                <div class="col">
+                <div>
                     <button><p class="letra">fes una reserva</p></button>
                 </div>
             </div>
@@ -55,9 +55,11 @@
         </section>
 
         <section class="background">
+            
             <footer class="d-flex justify-content-center">
                 <p class="blanco letra mt-3">Copyright, Daniel Sastre</p>
             </footer>
+
         </section>
 
     </section>
