--- a/reserva.html
+++ b/reserva.html
@@ -35,6 +35,86 @@
                 </ul>
             </nav>
         </section>
+
+        <section class="background_img">
+
+
+            <div class="container text-center cero">
+                <div class="row">
+                    <div class="col my-1">
+                        <img src="img/moon1.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col my-1">
+                        <img src="img/moon2.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col my-1">
+                        <img src="img/moon3.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col my-1 cero">
+                        <img src="img/moon4.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col my-1">
+                        <div class="background_moon">
+                            <h1 class="letra">Reserva el teu viatge a la lluna</h1>
+                            <form method="POST">
+                                <div class="d-flex justify-content-center">
+                                    <p class="letra">Passatgers:</p>
+                                    <textarea id="mensaje" name="mensaje" placeholder="Comment" required=""
+                                        class="inputs letra p-4"></textarea>
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <p class="letra">Nom i llinatges:</p>
+                                    <input type="text" id="nombre" name="nombre" placeholder="Name" required=""
+                                        class="inputs letra mb-2 p-2">
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <p class="letra">correu electronic</p>
+                                    <input type="email" id="email" name="email" placeholder="Email" required=""
+                                        class="inputs letra mb-2 p-2">
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <button type="submit" onclick="location.href='index.html'" class="cta-button inputs rounded-4 letra">Enviar
+                                        Mensaje</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="col my-1 cero">
+                        <img src="img/moon6.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+
+            <div class="container text-center cero">
+                <div class="row">
+                    <div class="col my-1">
+                        <img src="img/moon7.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col my-1">
+                        <img src="img/moon8.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col my-1">
+                        <img src="img/moon9.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+
+        <section class="background">
+
+            <footer class="d-flex justify-content-center">
+                <p class="blanco letra mt-3">Copyright, Daniel Sastre</p>
+            </footer>
+
+        </section>
+
     </section>
 </body>
 
